@@ -2,6 +2,7 @@ pref("extensions.fox@replace.fx.description", "chrome://foxreplace/locale/foxrep
 pref("extensions.foxreplace.substitutionListXml", '<substitutionlist version="0.10"/>');
 pref("extensions.foxreplace.autoReplaceOnLoad", false);
 pref("extensions.foxreplace.replaceUrls", false);
+pref("extensions.foxreplace.enableSubscription", false);
 pref("extensions.foxreplace.subscriptionUrl", "");
-pref("extensions.foxreplace.subscriptionPeriod", 0);
+pref("extensions.foxreplace.subscriptionPeriod", 1);
 pref("extensions.foxreplace.debug", false);
